# gh-deepagents

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  release-please-config.json
.deepagents/skills/: commit-conventions.md  github-workflow.md  i18n-conventions.md  js-conventions.md  migration-playbook.md  perf-playbook.md  python-conventions.md  security-checklist.md  testing-patterns.md
.deepagents/skills/commit-conventions/: SKILL.md
.deepagents/skills/github-workflow/: SKILL.md
.deepagents/skills/i18n-conventions/: SKILL.md
.deepagents/skills/js-conventions/: SKILL.md
.github/scripts/: post-deploy-healthcheck.py
.github/workflows/: ci.yml  conventional-pr.yml  deepagent.yml  deploy-hf-allinone.yml  deploy-hf-dashboard.yml  deploy-streamlit-cloud.yml  pr-preview-hf.yml  publish-image.yml  release-please.yml  rollback-on-failure.yml
deploy/: Caddyfile  docker-compose.yml  systemd-gh-deepagent.service
deploy/alertmanager/: alertmanager.yml
deploy/prometheus/: alerts.yml  prometheus.yml
deploy/streamlit-cloud/: README.md  requirements.txt  streamlit_app.py
docs/: ARCHITECTURE.md  CICD.md  CUSTOMIZATION.md  DASHBOARD.md  DEEPAGENTS_REVIEW.md  DEPLOY_HOSTED.md  GITHUB_APP.md  MULTI_TENANT.md  PRODUCTION.md  QUEUE_AND_OBSERVABILITY.md  SAAS_FEATURES.md  SANDBOXES.md  WEBHOOK.md
scripts/: eval_agent.py  install-ollama.sh
src/gh_deepagent/: __init__.py  agent.py  auth.py  cli.py  config.py  github_client.py  models.py  prompts.py  review_schema.py  runner.py  tools.py
tests/: test_agent_wiring.py  test_audit.py  test_auth.py  test_config.py  test_cost.py  test_cost_tenant.py  test_dashboard_api.py  test_eval_fixtures.py  test_github_client.py  test_healthcheck_script.py  test_hitl.py  test_layered_backend.py  test_metrics_middleware.py  test_oauth_device.py  test_observability.py  test_openrouter.py  test_queue.py  test_quota.py  test_repo_normalisation.py  test_review_schema.py  test_roles.py  test_specialised_tools.py  test_streaming.py  test_tools.py  test_tracing.py  test_webhook.py  test_webhook_auth.py  test_webhook_v6.py
(+47 files in other folders)
